--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ var markers = L.markerClusterGroup({disableClusteringAtZoom: 20});
   
 	  for (var i in data) {
       var row = data[i];
-	  console.log(data[4])
+	  console.log(row.4)
       /*
       var colorebande;
       if( row.Velocità_download == "Iliad Italia s.p.a") {  colorebande = "brown";
